# rs-pg

./: Cargo.toml  README.md
crates/rs-pg-derive/: Cargo.toml
crates/rs-pg-derive/src/: lib.rs
crates/rs-pg-scheme/: Cargo.toml
crates/rs-pg-scheme/src/: lib.rs
src/: database.rs  de.rs  entity.rs  error.rs  lib.rs  main.rs  query_builder.rs
