[package]
name = "rs-pg"
version = "0.1.0"
authors = ["Andrey <6gales@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rs_pg"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0"
postgres = {version = "0.17.3", features = ["with-serde_json-1"]}
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.18"
syn = "0.11.11"
quote = "0.3.15"
rs-pg-derive = { path = "crates/rs-pg-derive" }
rs-pg-scheme = { path = "crates/rs-pg-scheme" }
