[package]
name = "rs-pg-derive"
version = "0.1.0"
authors = ["Andrey <6gales@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "0.11.11"
quote = "0.3.15"
rs-pg-scheme = { path = "../rs-pg-scheme" }
